docs/v2.2.1/PROMOCIONES_UNA_VEZ_POR_CONVERSACION.md
# Entrega única de promociones por conversación

| Dato | Valor |
|---|---|
| Versión | `2.2.1` |
| Migración nueva | `V10` |
| Regla | Cada promoción se envía como máximo una vez por conversación |

## Comportamiento

La primera mención de una promoción activa incorpora su cuerpo canónico en la respuesta y registra la entrega en `CONVERSATION_PROMOTION_DELIVERIES`. Las siguientes menciones de la misma promoción dentro de la misma `CONVERSATION_SESSION` no vuelven a incorporar ese cuerpo; el bot conserva la respuesta conversacional normal.

Si un mensaje coincide con varias promociones, sólo se agregan las que todavía no fueron enviadas. Una sesión nueva permite volver a entregar las promociones.

El registro y el mensaje saliente se guardan dentro de la misma transacción. Una restricción única sobre `CONVERSATION_SESSION_ID` y `PROMOTION_ID`, junto con el bloqueo por teléfono, evita duplicados concurrentes.

## Tablas del módulo

| Migración | Tablas |
|---|---|
| `V8` | `PROMOTIONS`, `PROMOTION_ALIASES`, `PROMOTION_EVENTS` |
| `V9` | `ADMIN_USERS` |
| `V10` | `CONVERSATION_PROMOTION_DELIVERIES` |

Los scripts fuente están en:

- `src/main/resources/db/migration/V8__create_promotions.sql`
- `src/main/resources/db/migration/V9__create_admin_users.sql`
- `src/main/resources/db/migration/V10__track_conversation_promotion_deliveries.sql`

## SQL de la última migración

Flyway ejecuta este SQL automáticamente al iniciar la versión `2.2.1`. No debe ejecutarse manualmente en una base administrada por Flyway salvo durante una recuperación controlada, porque Flyway también debe registrar la versión en `FLYWAY_SCHEMA_HISTORY`.

```sql
CREATE TABLE IF NOT EXISTS CONVERSATION_PROMOTION_DELIVERIES (
    ID BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    CONVERSATION_SESSION_ID BIGINT NOT NULL,
    PROMOTION_ID BIGINT NOT NULL,
    PROMOTION_CODE VARCHAR(50) NOT NULL,
    DELIVERED_AT TIMESTAMP WITH TIME ZONE NOT NULL,
    CONSTRAINT FK_PROMOTION_DELIVERIES_SESSION
        FOREIGN KEY (CONVERSATION_SESSION_ID) REFERENCES CONVERSATION_SESSIONS (ID),
    CONSTRAINT FK_PROMOTION_DELIVERIES_PROMOTION
        FOREIGN KEY (PROMOTION_ID) REFERENCES PROMOTIONS (ID),
    CONSTRAINT UK_PROMOTION_DELIVERIES_SESSION_PROMOTION
        UNIQUE (CONVERSATION_SESSION_ID, PROMOTION_ID)
);

CREATE INDEX IF NOT EXISTS IDX_PROMOTION_DELIVERIES_SESSION
    ON CONVERSATION_PROMOTION_DELIVERIES (CONVERSATION_SESSION_ID, DELIVERED_AT);

CREATE INDEX IF NOT EXISTS IDX_PROMOTION_DELIVERIES_PROMOTION
    ON CONVERSATION_PROMOTION_DELIVERIES (PROMOTION_ID, DELIVERED_AT);
```

## Verificar Flyway

```sql
SELECT version, description, success, installed_on
FROM flyway_schema_history
WHERE version IN ('8', '9', '10')
ORDER BY installed_rank;
```

Las tres filas deben tener `SUCCESS = true`. Para comprobar la tabla nueva:

```sql
SELECT conversation_session_id, promotion_id, promotion_code, delivered_at
FROM conversation_promotion_deliveries
ORDER BY delivered_at DESC;
```

No debe haber más de una fila para la misma combinación de conversación y promoción.

## Prueba manual

1. Crear y activar `botox-qa` con alias `botox qa` y cuerpo `PROMO_BOTOX_QA`.
2. Usar un teléfono nuevo y enviar `Quiero botox qa`.
3. Confirmar que la respuesta contiene `PROMO_BOTOX_QA`.
4. Con el mismo teléfono enviar `¿Y cuál es el precio del botox qa?`.
5. Confirmar que la segunda respuesta no contiene `PROMO_BOTOX_QA` y sí conserva la respuesta normal para precio.
6. Usar otro teléfono y confirmar que la promoción vuelve a enviarse una vez.
